// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PhoneCard /> should render something 1`] = `
<WithStyles(UGCard)>
  <WithStyles(Padding)
    bottom="md"
    left="md"
    right="md"
    top="md"
  >
    <WithStyles(GridContainer)
      alignItems="center"
      spacing={1}
    >
      <WithStyles(GridItem)
        xs={true}
      >
        <WithStyles(GridContainer)
          alignItems="center"
          spacing={2}
          wrap="nowrap"
        >
          <WithStyles(GridItem) />
          <WithStyles(GridItem) />
        </WithStyles(GridContainer)>
      </WithStyles(GridItem)>
      <WithStyles(GridItem) />
    </WithStyles(GridContainer)>
  </WithStyles(Padding)>
</WithStyles(UGCard)>
`;

exports[`<PhoneCard /> should render something if isForm prop is true 1`] = `
<WithStyles(UGCard)>
  <WithStyles(Padding)
    bottom="md"
    left="md"
    right="md"
    top="md"
  >
    <WithStyles(GridContainer)
      alignItems="center"
      spacing={1}
    >
      <WithStyles(GridItem) />
    </WithStyles(GridContainer)>
  </WithStyles(Padding)>
</WithStyles(UGCard)>
`;
